Line height on small return home button corrected

--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,7 @@ ul {
     color: white;
     float: right;
     text-align: center;
-    line-height: 1.3;
+    line-height: 1.6;
     right: 5%;
     margin-left: 2px;
     font-size: 1.9em;
